# judy

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  conanfile.txt  jextract_dump.txt  jitpack.yml  pom.xml
.github/: build.yml
.github/conan2/: linux_default  macos_default
.github/workflows/: build.yml
include/: api.h  c_api.h  server.h  structs.h  timestamp.h
src/: asio_server.cc  c_api.cc  lib.cc  main.cc  native_server.cc  timestamp.cc
toolchains/: linux-aarch64.cmake  linux-x86_64.cmake  mac-x86_64.cmake  macos-aarch64.cmake  macos-x86_64.cmake
